<resources>
    <string name="app_name">MoviesManager</string>
    <string name="ic_add_movie">Add movie</string>
    <string name="ic_filter_by_name">Filter by name</string>
    <string name="ic_filter_by_score">Filter by score</string>
    <string name="context_main_menu_edit_movie">Edit movie</string>
    <string name="context_main_menu_remove_movie">Remove movie</string>
    <string name="tile_movie">Movie:</string>
    <string name="tile_score">Score:</string>
    <string name="activity_movie_movie">Movie</string>
    <string name="activity_movie_release_year">Release year</string>
    <string name="activity_movie_producer">Producer</string>
    <string name="activity_movie_duration">Duration</string>
    <string name="activity_movie_score">Score</string>
    <string name="activity_movie_save">Save</string>
    <string name="activity_movie_watched">Watched:</string>
    <string name="activity_movie_watched_yes">Yes</string>
    <string name="activity_movie_watched_no">No</string>

    <string-array name="genre">
        <item>Adventure</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Other</item>
    </string-array>
</resources>